--- a/CHANGES
+++ b/CHANGES
@@ -10,20 +10,21 @@ Version 0.85+1.3
 ~~~~~~~~~~~
 
 - Fix: Return of the Travis for unit tests.
-- Fix: errors on install / update plugin (php errors, SQL errors)
-- Fix: PHP errors in servicescatalogs
+- Fix: errors on install / update plugin (PHP errors, SQL errors)
+- Fix: PHP errors in servicecatalogs
 - Fix: errors in shinken configuration generator
-- Fix: buniness piority in components and servicescatalogs from 0 to 5 
+- Fix: business piority in components and servicescatalogs from 0 to 5 
   instead 1 to 5
 - Fix: problem with component argument contain '[[IP]]' string (not converted)
 - Fix: compatibility of plugin for PHP 5.3
 - Enhanced: Better performances to generate shinken configuration
-- Enhanced: install script in cli
+- Enhanced: install script in CLI
 - Enhanced: add option in user form to redirect home (when log in GLPI) to 
   monitoring dashboard (end-user interface only)
 - Enhanced: disable items move in dashboard views when not in edit mode
 - Enhanced: add columns in componentscatalogs and possibility to modify them
   in massive actions
+- Enhanced: add many tests for shinken config generator
 
 Version 0.85+1.2
 ~~~~~~~~~~~
