--- a/locales/de_DE.po
+++ b/locales/de_DE.po
@@ -10,9 +10,9 @@ msgstr ""
 "Project-Id-Version: GLPI Project - plugin monitoring \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-21 13:06+0200\n"
-"PO-Revision-Date: 2015-05-21 11:08+0000\n"
-"Last-Translator: David Durieux <d.durieux@siprossii.com>\n"
-"Language-Team: German (Germany) (http://www.transifex.com/projects/p/GLPI_monitoring/language/de_DE/)\n"
+"PO-Revision-Date: 2015-05-21 11:43+0000\n"
+"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"Language-Team: German (Germany) (http://www.transifex.com/ddurieux/GLPI_monitoring/language/de_DE/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,7 +37,7 @@ msgstr "Hosts überwachen"
 
 #: hook.php:193 hook.php:199
 msgid "Force play rules"
-msgstr ""
+msgstr "Spielregeln erzwingen"
 
 #: hook.php:644 front/menu.php:113 inc/display.class.php:143
 #: inc/servicescatalog.class.php:104
@@ -740,7 +740,7 @@ msgstr "Hostname des Gerätes"
 
 #: inc/component.class.php:559
 msgid "IP of the device"
-msgstr ""
+msgstr "IP des Gerätes"
 
 #: inc/component.class.php:560
 msgid "Network port number"
@@ -884,17 +884,17 @@ msgstr ""
 #: inc/componentscatalog_rule.class.php:177 inc/displayview_rule.class.php:188
 #: inc/search.class.php:452
 msgid "Update this rule"
-msgstr ""
+msgstr "Diese Regel aktualisieren"
 
 #: inc/componentscatalog_rule.class.php:180 inc/displayview_rule.class.php:191
 #: inc/search.class.php:455
 msgid "Delete this rule"
-msgstr ""
+msgstr "Diese Regel löschen"
 
 #: inc/componentscatalog_rule.class.php:187 inc/displayview_rule.class.php:198
 #: inc/search.class.php:460
 msgid "Add this rule"
-msgstr ""
+msgstr "Diese Regel hinzufügen"
 
 #: inc/componentscatalog_rule.class.php:200
 #: inc/customitem_counter.class.php:248 inc/customitem_gauge.class.php:248
@@ -1441,11 +1441,11 @@ msgstr ""
 
 #: inc/downtime.class.php:743
 msgid "Ticket type:"
-msgstr ""
+msgstr "Tickettyp:"
 
 #: inc/downtime.class.php:765
 msgid "Ticket category:"
-msgstr ""
+msgstr "Ticketkategorie:"
 
 #: inc/downtime.class.php:781
 msgid "No associated ticket for this downtime"
@@ -1649,7 +1649,7 @@ msgstr "Leistungsdaten und Graphendateien hochladen"
 
 #: inc/service.class.php:89 inc/serviceevent.class.php:174
 msgid "Service state type"
-msgstr ""
+msgstr "Dienststatustyp"
 
 #: inc/service.class.php:113
 msgid "Host acknowledge"
