--- a/locales/pt_BR.po
+++ b/locales/pt_BR.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Rafael Ferreira <rafael.f.f1@gmail.com>, 2012
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2012
 # Thiago Passamnai <thiagopassamani@gmail.com>, 2013
 msgid ""
 msgstr ""
@@ -12,7 +12,7 @@ msgstr ""
 "POT-Creation-Date: 2015-05-21 13:06+0200\n"
 "PO-Revision-Date: 2015-05-21 11:08+0000\n"
 "Last-Translator: David Durieux <d.durieux@siprossii.com>\n"
-"Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/GLPI_monitoring/language/pt_BR/)\n"
+"Language-Team: Portuguese (Brazil) (http://www.transifex.com/ddurieux/GLPI_monitoring/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
