--- a/locales/tr_TR.po
+++ b/locales/tr_TR.po
@@ -9,9 +9,9 @@ msgstr ""
 "Project-Id-Version: GLPI Project - plugin monitoring \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-21 13:06+0200\n"
-"PO-Revision-Date: 2015-05-21 11:08+0000\n"
-"Last-Translator: David Durieux <d.durieux@siprossii.com>\n"
-"Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/GLPI_monitoring/language/tr_TR/)\n"
+"PO-Revision-Date: 2015-05-21 21:01+0000\n"
+"Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
+"Language-Team: Turkish (Turkey) (http://www.transifex.com/ddurieux/GLPI_monitoring/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -738,7 +738,7 @@ msgstr "Aygıtın sunucu adı"
 
 #: inc/component.class.php:559
 msgid "IP of the device"
-msgstr ""
+msgstr "Aygıtın IP adresi"
 
 #: inc/component.class.php:560
 msgid "Network port number"
@@ -882,17 +882,17 @@ msgstr "Atanmış sunucular"
 #: inc/componentscatalog_rule.class.php:177 inc/displayview_rule.class.php:188
 #: inc/search.class.php:452
 msgid "Update this rule"
-msgstr ""
+msgstr "Bu kuralı güncelleyin"
 
 #: inc/componentscatalog_rule.class.php:180 inc/displayview_rule.class.php:191
 #: inc/search.class.php:455
 msgid "Delete this rule"
-msgstr ""
+msgstr "Bu kuralı silin"
 
 #: inc/componentscatalog_rule.class.php:187 inc/displayview_rule.class.php:198
 #: inc/search.class.php:460
 msgid "Add this rule"
-msgstr ""
+msgstr "Bu kuralı ekleyin"
 
 #: inc/componentscatalog_rule.class.php:200
 #: inc/customitem_counter.class.php:248 inc/customitem_gauge.class.php:248
